[gd_scene load_steps=9 format=3 uid="uid://cl8c4msa5g48w"]

[ext_resource type="Script" path="res://Scripts/Game/enemy.gd" id="1_016w2"]
[ext_resource type="Texture2D" uid="uid://doenxcoj6jvqo" path="res://assets/light.png" id="2_daux7"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_tggtt"]
polygon = PackedVector2Array(0, -10, 4, -9, 7, -7, 9, -4, 10, 0, 9, 4, 7, 7, 4, 9, 0, 10, -4, 9, -7, 7, -9, 4, -10, 0, -9, -4, -7, -7, -4, -9)

[sub_resource type="SphereMesh" id="SphereMesh_op7sj"]
radius = 10.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_b80u8"]
radius = 51.0098

[sub_resource type="Animation" id="Animation_fhdsu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_63aur"]
resource_name = "flicker"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ddu5"]
_data = {
"RESET": SubResource("Animation_fhdsu"),
"flicker": SubResource("Animation_63aur")
}

[node name="Enemy" type="RigidBody2D" groups=["Enemies"]]
collision_layer = 18
collision_mask = 15
linear_damp = 1.0
script = ExtResource("1_016w2")
force = 500

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_tggtt")

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
modulate = Color(1, 0, 0, 1)
mesh = SubResource("SphereMesh_op7sj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_b80u8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3ddu5")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 0.223529)
show_behind_parent = true
texture = ExtResource("2_daux7")

[node name="PathTimer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="PathTimer" to="." method="change_path"]
